--- a/public_html/app/themes/comber-wedding/css/main.css
+++ b/public_html/app/themes/comber-wedding/css/main.css
@@ -8365,9 +8365,20 @@ ul.main-navigation {
     right: 0;
     top: 0; } }
 
+.panel {
+  position: relative; }
+
+.gallery-upload-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  margin: 0;
+  padding: 0 30px;
+  line-height: 37px; }
+
 .gallery-image {
   position: relative;
-  padding-bottom: 45px; }
+  padding-bottom: 30px; }
   .gallery-image a {
     position: absolute;
     top: 0;
@@ -8375,19 +8386,58 @@ ul.main-navigation {
     height: 100%;
     width: 100%;
     z-index: 5; }
-
-.gall-thumb-inner {
-  padding-bottom: 100%;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: relative; }
-  .gall-thumb-inner p.title {
-    position: absolute;
-    bottom: -30px;
-    left: 0;
-    margin: 0;
-    width: 100%; }
+  .gallery-image .gall-thumb-inner {
+    padding-bottom: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative; }
+    .gallery-image .gall-thumb-inner p.title {
+      position: absolute;
+      bottom: 0;
+      color: #fff;
+      line-height: 20px;
+      padding: 10px 20px;
+      background-color: rgba(0, 0, 0, 0.5);
+      left: 0;
+      margin: 0;
+      width: 100%; }
+    .gallery-image .gall-thumb-inner:before {
+      content: 'View Gallery';
+      text-align: center;
+      line-height: 100%;
+      height: 100%;
+      padding-top: 45%;
+      color: #fff;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      background-size: 100px;
+      position: absolute;
+      left: 0;
+      top: 0;
+      display: block;
+      opacity: 0;
+      transition: all 0.3s linear; }
+  .gallery-image:hover .gall-thumb-inner:before {
+    opacity: 1; }
+  .gallery-image.upload-images-tile {
+    float: left !important; }
+    .gallery-image.upload-images-tile .gall-thumb-inner {
+      padding-bottom: 100%;
+      background-image: url("../images/gallery-tile.png"); }
+      .gallery-image.upload-images-tile .gall-thumb-inner:before {
+        content: ''; }
+      .gallery-image.upload-images-tile .gall-thumb-inner p.title {
+        position: absolute;
+        bottom: 50px;
+        text-align: center;
+        color: #fff;
+        line-height: 20px;
+        padding: 10px 20px;
+        background-color: transparent;
+        left: 0;
+        margin: 0;
+        width: 100%; }
 
 #sidebar-images img {
   padding-bottom: 25px; }
