--- a/public_html/app/themes/comber-wedding/scss/gallery.scss
+++ b/public_html/app/themes/comber-wedding/scss/gallery.scss
@@ -23,9 +23,22 @@
   }
 }
 
+.panel {
+  position: relative;
+}
+
+.gallery-upload-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  margin: 0;
+  padding: 0 30px;
+  line-height: 37px;
+}
+
 .gallery-image {
   position: relative;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   a {
     position: absolute;
     top: 0;
@@ -34,19 +47,68 @@
     width: 100%;
     z-index: 5;
   }
-}
-
-.gall-thumb-inner {
-  padding-bottom: 100%;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: relative;
-  p.title {
-    position: absolute;
-    bottom: -30px;
-    left: 0;
-    margin: 0;
-    width: 100%;
+  .gall-thumb-inner {
+    padding-bottom: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    p.title {
+      position: absolute;
+      bottom: 0;
+      color: #fff;
+      line-height: 20px;
+      padding: 10px 20px;
+      background-color: rgba(0,0,0,0.5);
+      left: 0;
+      margin: 0;
+      width: 100%;
+    }
+    &:before {
+      content: 'View Gallery';
+      text-align: center;
+      line-height: 100%;
+      height: 100%;
+      padding-top: 45%;
+      color: #fff;
+      width: 100%;
+      background-color: rgba(0,0,0,0.5);
+      background-size: 100px;
+      position: absolute;
+      left: 0;
+      top: 0;
+      display: block;
+      opacity: 0;
+      transition: all 0.3s linear;
+    }
+  }
+  &:hover {
+    .gall-thumb-inner {
+      &:before {
+        opacity: 1;
+      }
+    }
+  }
+  &.upload-images-tile {
+    float: left !important;
+    .gall-thumb-inner {
+      padding-bottom: 100%;
+      background-image: url('../images/gallery-tile.png');
+      &:before {
+        content: '';
+      }
+      p.title {
+        position: absolute;
+        bottom: 50px;
+        text-align: center;
+        color: #fff;
+        line-height: 20px;
+        padding: 10px 20px;
+        background-color: transparent;
+        left: 0;
+        margin: 0;
+        width: 100%;
+      }
+    }
   }
 }
